[metadata]
name = piano-transcription-webui
version = 0.0.1
author = HairlessVillager
long_description = file: README.md
license = MIT
url = https://github.com/HairlessVillager/piano_transcription_webui
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    matplotlib
    mido
    librosa>=0.8.0
    torchaudio

[options.entry_points]
console_scripts =
    transui = piano_transcription_webui.webui:main
